--- a/pages/index.html
+++ b/pages/index.html
@@ -19,12 +19,10 @@
       </header>
       <main class="main">
          <section class="lead">
-               <div class="content">
-               <h1 class="lead__title">Путешествие по России</h1>
+               <h1 class="lead__title">Путешествия по России</h1>
                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-               <img src="../images/kalegin-michail-179870-unsplash.jpg" alt="Женщина спит в поезде" class="lead__image">
+               <img src="../images/__image (first).jpg" alt="Женщина спит в поезде" class="lead__image">
                <p class="lead__caption">ваша полка — верхняя</p>
-            </div>
          </section>
       </main>
       <footer class="footer">
