block photo-grid

--- a/pages/index.html
+++ b/pages/index.html
@@ -35,6 +35,20 @@
                <li class="intro__list_item">Аэропортов 241</li>
             </ul>
          </section>
+         <section class="photo-grid">
+            <img src="../images/__item-11.jpg" alt="Вид из окна поезда" class="photo-grid__item">
+            <img src="../images/__item-10.jpg" alt="Вид с самолета на заснеженную гору" class="photo-grid__item">
+            <img src="../images/__item-9.jpg" alt="Вид на утреннее поле со стогами сена" class="photo-grid__item">
+            <img src="../images/__item-8.jpg" alt="Вид на затуманенный лес" class="photo-grid__item">
+            <img src="../images/__item-7.jpg" alt="Колесо машины на льду озера" class="photo-grid__item">
+            <img src="../images/__item-6.jpg" alt="Море с пляжем" class="photo-grid__item">
+            <img src="../images/__item-5.jpg" alt="Горы с заснеженными верхушками" class="photo-grid__item">
+            <img src="../images/__item-4.jpg" alt="Пешеходный переход и волнорезы" class="photo-grid__item">
+            <img src="../images/__item-3.jpg" alt="Вид с горы" class="photo-grid__item">
+            <img src="../images/__item-2.jpg" alt="Вид на вулкан" class="photo-grid__item">
+            <img src="../images/__item-1.jpg" alt="Вид на море и скалы" class="photo-grid__item">
+            <img src="../images/__item.jpg" alt="Вид с горы в облаке" class="photo-grid__item">
+         </section>
       </main>
       <footer class="footer">
          <p>&copy;</p>
