--- a/pages/index.html
+++ b/pages/index.html
@@ -117,6 +117,12 @@
                </div>   
             </div>
          </section>
+         <section class="cover">
+            
+            <h2 class="cover__title"><a class="title-link" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a></h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            
+         </section>
       </main>
       <footer class="footer">
          <p>&copy;</p>
