--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Путешествие по России</title>
-   <link rel="stylesheet" href="../vendor/normalize.css">
-   <link rel="stylesheet" href="../style.css">
+   <link rel="stylesheet" href="./vendor/normalize.css">
+   <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
+<body class="body">
    <div class="page">
       <header class="header">
-         <img src="../images/__logo.svg" alt="Россия" class="header__logo">
+         <img src="./images/__logo.svg" alt="Россия" class="header__logo">
          <div class="header__lang">
             <a href="#" class="header__lang_link selected">Ru</a>
             <a href="#" class="header__lang_link">En</a>
@@ -21,7 +21,7 @@
          <section class="lead">
                <h1 class="lead__title">Путешествия по России</h1>
                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-               <img src="../images/__image (first).jpg" alt="Женщина спит в поезде" class="lead__image">
+               <img src="./images/__image (first).jpg" alt="Женщина спит в поезде" class="lead__image">
                <p class="lead__caption">ваша полка — верхняя</p>
          </section>
          <section class="intro">
@@ -36,39 +36,39 @@
             </ul>
          </section>
          <section class="photo-grid">
-            <img src="../images/__item-11.jpg" alt="Вид из окна поезда" class="photo-grid__item">
-            <img src="../images/__item-10.jpg" alt="Вид с самолета на заснеженную гору" class="photo-grid__item">
-            <img src="../images/__item-9.jpg" alt="Вид на утреннее поле со стогами сена" class="photo-grid__item">
-            <img src="../images/__item-8.jpg" alt="Вид на затуманенный лес" class="photo-grid__item">
-            <img src="../images/__item-7.jpg" alt="Колесо машины на льду озера" class="photo-grid__item">
-            <img src="../images/__item-6.jpg" alt="Море с пляжем" class="photo-grid__item">
-            <img src="../images/__item-5.jpg" alt="Горы с заснеженными верхушками" class="photo-grid__item">
-            <img src="../images/__item-4.jpg" alt="Пешеходный переход и волнорезы" class="photo-grid__item">
-            <img src="../images/__item-3.jpg" alt="Вид с горы" class="photo-grid__item">
-            <img src="../images/__item-2.jpg" alt="Вид на вулкан" class="photo-grid__item">
-            <img src="../images/__item-1.jpg" alt="Вид на море и скалы" class="photo-grid__item">
-            <img src="../images/__item.jpg" alt="Вид с горы в облаке" class="photo-grid__item">
+            <img src="./images/__item-11.jpg" alt="Вид из окна поезда" class="photo-grid__item">
+            <img src="./images/__item-10.jpg" alt="Вид с самолета на заснеженную гору" class="photo-grid__item">
+            <img src="./images/__item-9.jpg" alt="Вид на утреннее поле со стогами сена" class="photo-grid__item">
+            <img src="./images/__item-8.jpg" alt="Вид на затуманенный лес" class="photo-grid__item">
+            <img src="./images/__item-7.jpg" alt="Колесо машины на льду озера" class="photo-grid__item">
+            <img src="./images/__item-6.jpg" alt="Море с пляжем" class="photo-grid__item">
+            <img src="./images/__item-5.jpg" alt="Горы с заснеженными верхушками" class="photo-grid__item">
+            <img src="./images/__item-4.jpg" alt="Пешеходный переход и волнорезы" class="photo-grid__item">
+            <img src="./images/__item-3.jpg" alt="Вид с горы" class="photo-grid__item">
+            <img src="./images/__item-2.jpg" alt="Вид на вулкан" class="photo-grid__item">
+            <img src="./images/__item-1.jpg" alt="Вид на море и скалы" class="photo-grid__item">
+            <img src="./images/__item.jpg" alt="Вид с горы в облаке" class="photo-grid__item">
          </section>
          <section class="places">
             <div class="place">
                <h2 class="place__title">Куршская коса</h2>
-               <img src="../images/__image.jpg" alt="Берег каменистый" class="place__image">
                <div class="place__website">
                   <p class="place__url-heading">URL</p>
                   <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
                </div>
+               <img src="./images/__image.jpg" alt="Берег каменистый" class="place__image">
                <div class="place__paragraph">
                   <p class="place__paragraph_item">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-                  <p class="place__paragraph_item">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                  <p class="place__paragraph_item">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету и волнения, окуная в спокойствие природы и запах стального, прохладного моря.</p>
                </div>   
             </div>
             <div class="place">
                <h2 class="place__title">Кольский</h2>
-               <img src="../images/__image (1).jpg" alt="Кольский заснеженный" class="place__image">
                <div class="place__website">
                   <p class="place__url-heading">URL</p>
                   <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
                </div>
+               <img src="./images/__image (1).jpg" alt="Кольский заснеженный" class="place__image">
                <div class="place__paragraph">
                   <p class="place__paragraph_item">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                      тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -78,11 +78,11 @@
             </div>
             <div class="place">
                <h2 class="place__title">Алтай</h2>
-               <img src="../images/__image (2).jpg" alt="Алтайский лес" class="place__image">
                <div class="place__website">
                   <p class="place__url-heading">URL</p>
                   <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link">YouTube</a>
                </div>
+               <img src="./images/__image (2).jpg" alt="Алтайский лес" class="place__image">
                <div class="place__paragraph">
                   <p class="place__paragraph_item">Алтай — одно из красивейших мест в России. 
                      В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -91,11 +91,11 @@
             </div>
             <div class="place">
                <h2 class="place__title">Зимний Байкал</h2>
-               <img src="../images/__image (3).jpg" alt="Байкальский лёд>" class="place__image">
                <div class="place__website">
                   <p class="place__url-heading">URL</p>
                   <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
                </div>
+               <img src="./images/__image (3).jpg" alt="Байкальский лёд>" class="place__image">
                <div class="place__paragraph">
                   <p class="place__paragraph_item">Всем известен Байкал как крупнейшее озеро 
                      в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -105,11 +105,12 @@
             </div>
             <div class="place">
                <h2 class="place__title">Карелия</h2>
-               <img src="../images/__image (4).jpg" alt="Карельская река и лес>" class="place__image">
                <div class="place__website">
                   <p class="place__url-heading">URL</p>
                   <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru</a>
                </div>
+               <img src="./images/__image (4).jpg" alt="Карельская река и лес>" class="place__image">
+
                <div class="place__paragraph">
                   <p class="place__paragraph_item">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                      В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
@@ -118,14 +119,19 @@
             </div>
          </section>
          <section class="cover">
-            
-            <h2 class="cover__title"><a class="title-link" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a></h2>
+            <h2 class="cover__title"><a class="cover__title-link" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a></h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-            
          </section>
       </main>
       <footer class="footer">
-         <p>&copy;</p>
+         <nav class="footer__links">
+            <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+            <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+            <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+            <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+            <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+         </nav>
+         <p class="footer__copyright">&copy; 2023. Александр</p>
       </footer>
    </div>   
 </body>
