--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          <section class="lead">
                <h1 class="lead__title">Путешествия по России</h1>
                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-               <img src="./images/__image (first).jpg" alt="Женщина спит в поезде" class="lead__image">
+               <img src="./images/__image(first).jpg" alt="Женщина спит в поезде" class="lead__image">
                <p class="lead__caption">ваша полка — верхняя</p>
          </section>
          <section class="intro">
@@ -35,7 +35,7 @@
                <li class="intro__list_item">Аэропортов 241</li>
             </ul>
          </section>
-         <section class="photo-grid">
+         <section class="photo-grid" aria-label="Плитка из картинок">
             <img src="./images/__item-11.jpg" alt="Вид из окна поезда" class="photo-grid__item">
             <img src="./images/__item-10.jpg" alt="Вид с самолета на заснеженную гору" class="photo-grid__item">
             <img src="./images/__item-9.jpg" alt="Вид на утреннее поле со стогами сена" class="photo-grid__item">
@@ -68,7 +68,7 @@
                   <p class="place__url-heading">URL</p>
                   <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
                </div>
-               <img src="./images/__image (1).jpg" alt="Кольский заснеженный" class="place__image">
+               <img src="./images/__image(1).jpg" alt="Кольский заснеженный" class="place__image">
                <div class="place__paragraph">
                   <p class="place__paragraph_item">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                      тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -82,7 +82,7 @@
                   <p class="place__url-heading">URL</p>
                   <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link">YouTube</a>
                </div>
-               <img src="./images/__image (2).jpg" alt="Алтайский лес" class="place__image">
+               <img src="./images/__image(2).jpg" alt="Алтайский лес" class="place__image">
                <div class="place__paragraph">
                   <p class="place__paragraph_item">Алтай — одно из красивейших мест в России. 
                      В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -95,7 +95,7 @@
                   <p class="place__url-heading">URL</p>
                   <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
                </div>
-               <img src="./images/__image (3).jpg" alt="Байкальский лёд>" class="place__image">
+               <img src="./images/__image(3).jpg" alt="Байкальский лёд>" class="place__image">
                <div class="place__paragraph">
                   <p class="place__paragraph_item">Всем известен Байкал как крупнейшее озеро 
                      в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -109,7 +109,7 @@
                   <p class="place__url-heading">URL</p>
                   <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru</a>
                </div>
-               <img src="./images/__image (4).jpg" alt="Карельская река и лес>" class="place__image">
+               <img src="./images/__image(4).jpg" alt="Карельская река и лес>" class="place__image">
 
                <div class="place__paragraph">
                   <p class="place__paragraph_item">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
