--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <header class="header">
          <img src="./images/__logo.svg" alt="Россия" class="header__logo">
          <div class="header__lang">
-            <a href="#" class="header__lang_link selected">Ru</a>
-            <a href="#" class="header__lang_link">En</a>
+            <a href="#" class="header__lang-link selected">Ru</a>
+            <a href="#" class="header__lang-link">En</a>
          </div>
       </header>
       <main class="main">
@@ -28,11 +28,11 @@
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
-               <li class="intro__list_item">Часовых поясов 11</li>
-               <li class="intro__list_item">Объектов природного наследия ЮНЕСКО 12</li>
-               <li class="intro__list_item">Объектов культурного наследия ЮНЕСКО 16</li>
-               <li class="intro__list_item">Природных заповедников 105</li>
-               <li class="intro__list_item">Аэропортов 241</li>
+               <li class="intro__list-item">Часовых поясов 11</li>
+               <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
+               <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
+               <li class="intro__list-item">Природных заповедников 105</li>
+               <li class="intro__list-item">Аэропортов 241</li>
             </ul>
          </section>
          <section class="photo-grid" aria-label="Плитка из картинок">
@@ -58,8 +58,8 @@
                </div>
                <img src="./images/__image.jpg" alt="Берег каменистый" class="place__image">
                <div class="place__paragraph">
-                  <p class="place__paragraph_item">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-                  <p class="place__paragraph_item">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету и волнения, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                  <p class="place__paragraph-item">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+                  <p class="place__paragraph-item">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету и волнения, окуная в спокойствие природы и запах стального, прохладного моря.</p>
                </div>   
             </div>
             <div class="place">
@@ -70,9 +70,9 @@
                </div>
                <img src="./images/__image(1).jpg" alt="Кольский заснеженный" class="place__image">
                <div class="place__paragraph">
-                  <p class="place__paragraph_item">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
+                  <p class="place__paragraph-item">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                      тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                  <p class="place__paragraph_item">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+                  <p class="place__paragraph-item">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
                      в Мурманск.</p>
                </div>   
             </div>
@@ -84,9 +84,9 @@
                </div>
                <img src="./images/__image(2).jpg" alt="Алтайский лес" class="place__image">
                <div class="place__paragraph">
-                  <p class="place__paragraph_item">Алтай — одно из красивейших мест в России. 
+                  <p class="place__paragraph-item">Алтай — одно из красивейших мест в России. 
                      В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-                  <p class="place__paragraph_item">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+                  <p class="place__paragraph-item">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
                </div>   
             </div>
             <div class="place">
@@ -97,9 +97,9 @@
                </div>
                <img src="./images/__image(3).jpg" alt="Байкальский лёд>" class="place__image">
                <div class="place__paragraph">
-                  <p class="place__paragraph_item">Всем известен Байкал как крупнейшее озеро 
+                  <p class="place__paragraph-item">Всем известен Байкал как крупнейшее озеро 
                      в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-                  <p class="place__paragraph_item">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
+                  <p class="place__paragraph-item">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
                      к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                </div>   
             </div>
@@ -112,7 +112,7 @@
                <img src="./images/__image(4).jpg" alt="Карельская река и лес>" class="place__image">
 
                <div class="place__paragraph">
-                  <p class="place__paragraph_item">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
+                  <p class="place__paragraph-item">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                      В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
                      в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                </div>   
