--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Путешествие по России</title>
-   <link rel="stylesheet" href="./vendor/normalize.css">
    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="body">
@@ -13,7 +12,7 @@
       <header class="header">
          <img src="./images/__logo.svg" alt="Россия" class="header__logo">
          <div class="header__lang">
-            <a href="#" class="header__lang-link selected">Ru</a>
+            <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
             <a href="#" class="header__lang-link">En</a>
          </div>
       </header>
@@ -28,11 +27,11 @@
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
-               <li class="intro__list-item">Часовых поясов 11</li>
-               <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
-               <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-               <li class="intro__list-item">Природных заповедников 105</li>
-               <li class="intro__list-item">Аэропортов 241</li>
+               <li class="intro__list-item">Часовых поясов <span class="intro__list-number">11</span></li>
+               <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__list-number">12</span></li>
+               <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__list-number">16</span></li>
+               <li class="intro__list-item">Природных заповедников <span class="intro__list-number">105</span></li>
+               <li class="intro__list-item">Аэропортов <span class="intro__list-number">241</span></li>
             </ul>
          </section>
          <section class="photo-grid" aria-label="Плитка из картинок">
@@ -50,23 +49,23 @@
             <img src="./images/__item.jpg" alt="Вид с горы в облаке" class="photo-grid__item">
          </section>
          <section class="places">
-            <div class="place">
+            <article class="place">
                <h2 class="place__title">Куршская коса</h2>
                <div class="place__website">
                   <p class="place__url-heading">URL</p>
-                  <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+                  <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
                </div>
                <img src="./images/__image.jpg" alt="Берег каменистый" class="place__image">
                <div class="place__paragraph">
                   <p class="place__paragraph-item">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
                   <p class="place__paragraph-item">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету и волнения, окуная в спокойствие природы и запах стального, прохладного моря.</p>
                </div>   
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                <h2 class="place__title">Кольский</h2>
                <div class="place__website">
                   <p class="place__url-heading">URL</p>
-                  <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
+                  <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link" target="_blank">National Geographic</a>
                </div>
                <img src="./images/__image(1).jpg" alt="Кольский заснеженный" class="place__image">
                <div class="place__paragraph">
@@ -75,12 +74,12 @@
                   <p class="place__paragraph-item">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
                      в Мурманск.</p>
                </div>   
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                <h2 class="place__title">Алтай</h2>
                <div class="place__website">
                   <p class="place__url-heading">URL</p>
-                  <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link">YouTube</a>
+                  <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link" target="_blank">YouTube</a>
                </div>
                <img src="./images/__image(2).jpg" alt="Алтайский лес" class="place__image">
                <div class="place__paragraph">
@@ -88,12 +87,12 @@
                      В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
                   <p class="place__paragraph-item">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
                </div>   
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                <h2 class="place__title">Зимний Байкал</h2>
                <div class="place__website">
                   <p class="place__url-heading">URL</p>
-                  <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+                  <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
                </div>
                <img src="./images/__image(3).jpg" alt="Байкальский лёд>" class="place__image">
                <div class="place__paragraph">
@@ -102,12 +101,12 @@
                   <p class="place__paragraph-item">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
                      к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                </div>   
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                <h2 class="place__title">Карелия</h2>
                <div class="place__website">
                   <p class="place__url-heading">URL</p>
-                  <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru</a>
+                  <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru</a>
                </div>
                <img src="./images/__image(4).jpg" alt="Карельская река и лес>" class="place__image">
 
@@ -116,20 +115,22 @@
                      В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
                      в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                </div>   
-            </div>
+            </article>
          </section>
-         <section class="cover">
-            <h2 class="cover__title"><a class="cover__title-link" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a></h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-         </section>
+         <a class="cover__title-link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+            <section class="cover">
+               <h2 class="cover__title">До Байкала «на собаках»</h2>
+               <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            </section>
+         </a>
       </main>
       <footer class="footer">
          <nav class="footer__links">
-            <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-            <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-            <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-            <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-            <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+            <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
+            <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
+            <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
+            <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
+            <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
          </nav>
          <p class="footer__copyright">&copy; 2023. Александр</p>
       </footer>
