--- a/index.html
+++ b/index.html
@@ -116,13 +116,15 @@
                      в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                </div>   
             </article>
+         </section>  
+         <section class="cover">
+            <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+               <div class="cover__card">
+                  <h2 class="cover__title">До Байкала «на собаках»</h2>
+                  <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+               </div> 
+            </a>  
          </section>
-         <a class="cover__title-link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-            <section class="cover">
-               <h2 class="cover__title">До Байкала «на собаках»</h2>
-               <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-            </section>
-         </a>
       </main>
       <footer class="footer">
          <nav class="footer__links">
