--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
    <title>Путешествие по России</title>
    <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body class="body">
-   <div class="page">
+<body class="page">
       <header class="header">
          <img src="./images/__logo.svg" alt="Россия" class="header__logo">
          <div class="header__lang">
@@ -116,14 +115,12 @@
                      в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                </div>   
             </article>
-         </section>  
+         </section>
          <section class="cover">
             <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-               <div class="cover__card">
-                  <h2 class="cover__title">До Байкала «на собаках»</h2>
-                  <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-               </div> 
-            </a>  
+               <h2 class="cover__title">До Байкала «на собаках»</h2>
+               <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            </a>
          </section>
       </main>
       <footer class="footer">
@@ -136,6 +133,5 @@
          </nav>
          <p class="footer__copyright">&copy; 2023. Александр</p>
       </footer>
-   </div>   
 </body>
 </html>
